--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
-hello world!
-#test
-今天是2018.1.15
-hello
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+	<meta charset="UTF-8" />
+	<title>曾鹏的首页</title>
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link rel="icon" type="image/x-icon" href="images/icon.png">
+	<link rel="stylesheet" type="text/css" href="css/reset.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+</head>
+<body>
+	<header class="header">
+		hello!
+	</header>
+	<a href="demo/index.html" class="link_a">点击进入</a>
+</body>
+</html>
