--- a/test/tset.html
+++ b/test/tset.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>前端测试</title>
+		<title>曾鹏的Route</title>
+		<link rel="icon" type="image/x-icon" href="images/icon.png">
 		<style type="text/css">
 			*{margin: 0;padding: 0;}
 			a{display: block;width: 40%;margin: 30px auto;border: 1px solid #09BA07; color: #09BA07;height: 40px;line-height: 40px;text-align: center;border-radius: 10px;text-decoration: none;}
