--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
-	<meta charset="UTF-8" />
-	<title>曾鹏的首页</title>
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="icon" type="image/x-icon" href="images/icon.png">
-	<link rel="stylesheet" type="text/css" href="css/reset.css"/>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <meta charset="UTF-8" />
+    <title>曾鹏的首页</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/x-icon" href="images/icon.png">
+    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
+
 <body>
-	<header class="header">
-		hello!
-	</header>
-	<a href="demo/index.html" class="link_a">点击进入</a>
-	<p>git gui here</p>
+    <header class="header">
+        hello!
+    </header>
+    <a href="demo/index.html" class="link_a">点击进入</a>
+    <p>git gui here</p>
+
+    <div>
+        hello website!
+    </div>
 </body>
+
 </html>
